Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-14511

Possible error in \framebuf\pointer.c

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.9
    • Win32SS
    • None

    Description

      Line 226:  ppdev->PointerColorSurface is deleted but the next line sets

      PointerMaskSurface to NULL instead of PointerColorSurface which leads to Line: 230 being FALSE and memory not being released.

       

      Also on line 299:  ppdev->PointerMaskSurface = NULL;

      It can't be reached if psoMask == NULL on Line 252 because of the return statement. So line 299 will never ne executed.

      Attachments

        Activity

          People

            hbelusca hbelusca
            mudhead mudhead
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: