[WIN32SS:FRAMEBUF] Improve/Fix DrvSetPointerShape(), from r7864 (#457)

- Fix a copypasta.
- Remove dead code.

Thanks to mudhead, who spotted most of these.

NB:
This EXPERIMENTAL_MOUSE_CURSOR_SUPPORT code isn't compiled by default since r7865.

CORE-14511